--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <div class="card">
-      
+      <div class="card-image">
+        <img src="assets/images/illustration-article.svg" alt="">
+      </div>
+      <div class="card-content">
+
+      </div>
+      <div class="card-author">
+        
+      </div>
     </div>
   </body>
 </html>
