--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Blog preview card</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="card">
       <div class="card-image">
-        <img src="assets/images/illustration-article.svg" alt="">
+        <img src="assets/images/illustration-article.svg" alt="" />
       </div>
       <div class="card-content">
-
+        <div class="category">
+          <p>Learning</p>
+        </div> 
+        <p class="date">Published 21 Dec 2023</p>
+        <h1 class="title">HTML & CSS foundations</h1>
+        <p class="description">These languages are the backbone of every website, defining structure, content and presentation.</p>
       </div>
       <div class="card-author">
-        
+        <img src="assets/images/image-avatar.webp" alt="" class="author-image">
+        <span class="username">Greg Hooper</span>
       </div>
     </div>
   </body>
